fix(go): update api docs
